--- a/src/less/header/index.less
+++ b/src/less/header/index.less
@@ -99,5 +99,12 @@
       font-size: 14px;
       color: #fff;
     }
+    .ivu-select-dropdown {
+      .ivu-dropdown-menu {
+        .ivu-dropdown-item {
+          font-size: 1.4rem !important;
+        }
+      }
+    }
   }
 }
