--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -2,7 +2,8 @@ html, body {
 	border: 0;
   font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
   font-size: 62.5%;
-	line-height: 1.5;
+  line-height: 1.5;
+  height: 100%;
 	margin: 0;
 	padding: 0;
 }
@@ -19,7 +20,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cit, code,
 del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
 ol, ul, li, fieldset, legend, label {
   border: 0;
-  font-size: 100%;
+  // font-size: 100%;
   vertical-align: baseline;
   margin: 0;
   padding: 0;
