--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,5 +1,10 @@
 #app {
   font-size: 1.4rem;
+  /deep/.divide-div {
+    height: 1.5px;
+    background: #E8EAEC;
+    margin: 0 2rem;
+  }
 }
 .img-cropper {
   .button-list {
@@ -40,7 +45,7 @@
                 width: 8rem;
                 height: 8rem;
                 border-radius: .5rem;
-                margin-right: 2rem;
+                // margin-right: 2rem;
               }
               .add-img {
                 width: 8rem;
@@ -56,8 +61,41 @@
                   background: #eee;
                 }
               }
-              .upload-img {
-
+            }
+            .uplload-list {
+              display: inline-block;
+              position: relative;
+              font-size: 0;
+              margin-right: 2rem;
+              .background-cover {
+                display: none;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0,0,0,.6);
+                .ivn-icon {
+                  color: #fff;
+                  font-size: 2rem;
+                  cursor: pointer;
+                  margin: 0 2px;
+                }
+              }
+              &:hover {
+                .background-cover {
+                  display: block;
+                  .ivu-icon {
+                    font-size: 3.5rem;
+                    color: #fff;
+                    cursor: pointer;
+                    user-select: none;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                  }
+                }
               }
             }
           }
