--- a/src/less/header/index.less
+++ b/src/less/header/index.less
@@ -12,12 +12,17 @@
   .logo {
       display: block;
       float: left;
-      width: 10rem;
-      height: 100%;
-      margin: 0.5rem 2rem;
       margin-left: 3rem;
-      background: url(~assets/images/WeUniv.png) no-repeat;
-      background-size: 90%;
+      font-size: 2.5rem;
+      font-weight: bolder;
+      font-family: Comic Sans MS, Comic Sans, cursive;
+      color: #009A61;
+      // text-shadow: 0 0 0.01rem, 0 0 0.01rem;
+      // width: 10rem;
+      // height: 100%;
+      // margin: 0.5rem 2rem;
+      // background: url(~assets/images/WeUniv.png) no-repeat;
+      // background-size: 90%;
   }
   .header-left {
     float: left;
