--- a/src/less/app.less
+++ b/src/less/app.less
@@ -133,3 +133,27 @@
     }
   }
 }
+
+.article-modal {
+  .ivu-modal {
+    width: 50% !important;
+    min-height: 40rem !important;
+    .ivu-modal-body {
+      /deep/.article-view {
+        .g-header {
+          display: none;
+        }
+        .article-view-area {
+          width: 100%;
+          margin-top: 0;
+          .comment-panel {
+            margin-bottom: 0;
+          }
+          .btn-list {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
