--- a/src/less/header/index.less
+++ b/src/less/header/index.less
@@ -70,6 +70,17 @@
           margin-right: 2rem;
           cursor: pointer;
         }
+        .badge {
+          position: absolute;
+          height: 1rem;
+          width: 1rem;
+          background: green;
+          border-radius: 1rem;
+          border: 1px solid #fff;
+          color: #fff;
+          top: 13px;
+          left: 20px;
+        }
         .header-avatar {
           font-size: 1.3rem;
           margin-right: 2rem;
@@ -106,6 +117,24 @@
                 font-size: 1.3rem;
                 line-height: 2rem;
               }
+              .tip {
+                font-size: 1.1rem;
+                display: inline-block;
+                width: 2rem;
+                height: 2rem;
+                background: green;
+                color: #fff;
+                text-align: center;
+                border-radius: 2rem;
+                vertical-align: top;
+                line-height: 2rem;
+                float: right;
+                margin-right: 2.5rem;
+              }
+              // .content {
+              //   float: right;
+              //   margin-right: 2.8rem;
+              // }
             }
           }
         }
