--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -7,6 +7,9 @@ html, body {
 	margin: 0;
 	padding: 0;
 }
+html {
+  height: auto;
+}
 
 div, span, object, iframe, img, table, caption, thead, tbody,
 tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
